unit10_e/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
14:41:40 **** Build of configuration Debug for project unit10 ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
../main.c:15:9: error: implicit declaration of function 'getch' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        getch(*(p+i));
        ^
../main.c:15:9: note: did you mean 'getc'?
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/stdio.h:166:6: note: 'getc' declared here
int      getc(FILE *);
         ^
../main.c:16:9: error: implicit declaration of function 'putch' is invalid in C99 [-Werror,-Wimplicit-function-declaration]
        putch('*');
        ^
../main.c:16:9: note: did you mean 'putc'?
/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/stdio.h:171:6: note: 'putc' declared here
int      putc(int, FILE *);
         ^
2 errors generated.
make: *** [main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
16:09:54 **** Incremental Build of configuration Debug for project unit10 ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: unit10
Invoking: MacOS X C Linker
gcc  -o "unit10"  ./main.o   
Finished building target: unit10
 
16:10:05 **** Incremental Build of configuration Debug for project unit10 ****
make all 
make: Nothing to be done for `all'.
16:10:24 **** Incremental Build of configuration Debug for project unit10 ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: unit10
Invoking: MacOS X C Linker
gcc  -o "unit10"  ./main.o   
Finished building target: unit10
 
